fix bugs in tournament api