@@ -8,15 +8,11 @@ import ku.th.tournamentwebsiteback.request.UpdateTournamentRequest;
 import ku.th.tournamentwebsiteback.response.TournamentProfileResponse;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.PageRequest;
-import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.toList;
 
@@ -42,33 +38,41 @@ public class TournamentService {
     }
 
 
-    public void createTournament(TournamentRequest request) {
+    public TournamentProfileResponse createTournament(TournamentRequest request) {
         Tournament tournament = modelMapper.map(request, Tournament.class);
-        tournamentRepository.save(tournament);
+        return convertToDto(tournamentRepository.save(tournament));
     }
 
     public void updateTournament(UUID tournamentId, UpdateTournamentRequest request) {
         Tournament existingTournament = tournamentRepository.findById(tournamentId)
                 .orElseThrow(() -> new EntityNotFoundException("Tournament not found"));
+
+        modelMapper.getConfiguration().setSkipNullEnabled(true);
         modelMapper.map(request, existingTournament);
         tournamentRepository.save(existingTournament);
     }
 
     public TournamentProfileResponse getLatestTournament() {
-        Optional<Tournament> latestTournament = tournamentRepository.findAll(PageRequest.of(0, 1, Sort.by(Sort.Direction.DESC, "startDate"))).stream().findFirst();
-        return latestTournament.map(this::convertToDto).orElse(null);
+        Tournament latestTournament = tournamentRepository.findTopByOrderByStartQualifierDateTimeDesc();
+        if (latestTournament == null) {
+            throw new EntityNotFoundException("No latest tournament found");
+        }
+        return convertToDto(latestTournament);
     }
 
     public List<TournamentProfileResponse> getCurrentTournaments() {
         ZonedDateTime now = ZonedDateTime.now();
+        List<Tournament> currentTournaments = tournamentRepository.findByStartQualifierDateTimeBeforeAndEndDateTimeAfter(now, now);
 
-        return tournamentRepository.findAll()
-                .stream()
-                .filter(tournament -> tournament.getStartQualifierDateTime().isBefore(now) &&
-                        tournament.getEndDateTime().isAfter(now))
+        if (currentTournaments.isEmpty()) {
+            throw new EntityNotFoundException("No current tournament found");
+        }
+
+        return currentTournaments.stream()
                 .map(this::convertToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
+
 
     private TournamentProfileResponse convertToDto(Tournament tournament) {
         return modelMapper.map(tournament, TournamentProfileResponse.class);
